--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ pyinstaller-hooks-contrib==2025.1
 pywin32-ctypes==0.2.3
 setuptools==75.8.0
 Werkzeug==3.1.3
+
+# ✅ Add These:
+gunicorn==23.0.0
+requests==2.31.0
